--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ h1 {
   margin-bottom: 1.5rem;
   letter-spacing: 0.5rem;
   color: lightgrey;
+  width: 100%;
 }
 .loader {
   display: flex;
@@ -41,23 +42,71 @@ h1 {
   display: flex;
   justify-content: center;
   align-content: center;
-  /* flex-direction: column; */
   gap: 1rem;
   width: 100%;
   padding: 2rem;
   flex-wrap: wrap;
+  margin: 3rem;
 }
-.image_container .img {
-  width: 100%;
-  height: 60vh;
+/* .image_container .img {
+  width: auto;
+  max-width: 100%;
+  height: auto;
+  max-height: 60vh;
   object-fit: contain;
   border-radius: 1rem;
   margin: 0 auto;
-}
+} */
 
 /* Media quaries  */
 @media screen and (min-width: 1000px) {
   .image_container img {
     width: 60rem;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .image_container img {
+    width: 60rem;
+    margin: 2rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .image_container img {
+    width: 50rem;
+    overflow: hidden;
+  }
+}
+@media screen and (max-width: 541px) {
+  .image_container img {
+    width: 48rem;
+    overflow: hidden;
+  }
+}
+@media screen and (max-width: 440px) {
+  .image_container img {
+    width: 45rem;
+    overflow: hidden;
+  }
+  h1 {
+    font-size: 3rem;
+    margin-left: 1rem;
+  }
+}
+@media screen and (max-width: 394px) {
+  .image_container img {
+    width: 40rem;
+    overflow: hidden;
+  }
+  h1 {
+    font-size: 2.5rem;
+    text-align: center;
+    margin-left: 3rem;
+  }
+}
+@media screen and (max-width: 338px) {
+  .image_container img {
+    width: 30rem;
+    overflow: hidden;
   }
 }
